# aiengineer-twitter-emotions-sentiment-analysis

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker_build.yml
api/: README.md  pyproject.toml
api/src/: main.py
src/: twitter_emotions_sentiment_analysis.ipynb
src/models/GRU [lstm_units=32, dropout=0.4, dense_units=32]/: history.json
