[tool.poetry]
name = "aiengineer-summary-4-python-bartlomiejpieper-dev"
version = "0.1.0"
description = ""
authors = ["bartl <bartlomiejpieper.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
myvisualization = {path = "packages/myvisualization", develop = true}
mypreprocessing = {path = "packages/mypreprocessing", develop = true}
python = ">=3.10, <3.11"
matplotlib = "3.8.4"
pandas = "2.2.2"
numpy = "1.26.4"
nltk = "3.8.1"
tensorflow = "2.10"
tensorflow-io-gcs-filesystem = "0.27.0"
counter = "1.0.0"
scikit-learn = "1.5.2"
seaborn = "0.13.2"
pyarrow = "17.0.0"
mlflow = "2.17.2"
fastapi = "0.115.4"
uvicorn = "0.32.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
